[project]
name = "ip-visualize"
authors = [
    {name = "Wayne Ye", email = "xiaotianpop@gmail.com"}
]
version = "0.1.0"
description = "Visualize given IP addresses on a global geographic heat map"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "folium==0.19.5",
    "geoip2==5.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
